# drf-api

./: db.sqlite3  pyproject.toml  readme.md  requirements.txt
blog_project/: settings.py  urls.py
posts/: tests.py
posts/migrations/: 0001_initial.py
